# muta-template

./: .gitignore  Cargo.toml  README.md
node-template/: Cargo.toml
node-template/config/: chain.toml  genesis.toml
node-template/services/metadata/: Cargo.toml
node-template/services/metadata/src/: lib.rs  types.rs
node-template/src/: main.rs
service-template/: Cargo.toml
service-template/src/: lib.rs
src/: main.rs
