[package]
name = "muta-chain"
version = "0.1.0"
authors = ["yejiayu <yejiayu.fe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
muta = { git = "https://github.com/nervosnetwork/muta", branch = "master" }
protocol = { git = "https://github.com/nervosnetwork/muta", branch = "master", package = "muta-protocol" }

derive_more = "0.15"
runtime = "0.3.0-alpha.7"
runtime-tokio = "0.3.0-alpha.6"

asset = { git = "https://github.com/nervosnetwork/muta", branch = "master" }
metadata = { path = "services/metadata" }

[workspace]
members = [
  "services/metadata",
]
