[package]
name = "muta-chain"
version = "0.1.0"
authors = ["yejiayu <yejiayu.fe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
muta = { git = "https://github.com/nervosnetwork/muta", tag = "v0.1.0-rc.2-huobi" }
protocol = { git = "https://github.com/nervosnetwork/muta", tag = "v0.1.0-rc.2-huobi", package = "muta-protocol" }

derive_more = "0.15"
tokio = { version = "0.2", features = ["macros", "rt-core"]}

asset = { git = "https://github.com/nervosnetwork/muta", tag = "v0.1.0-rc.2-huobi" }
metadata = { path = "services/metadata" }

[workspace]
members = [
  "services/metadata",
]
